# rust-multilayer-perceptron

./: Cargo.toml  LICENSE-MIT  README.md
src/: main.rs  mandelbrot.rs  mlp.rs
