[package]
name = "rust-multilayer-perceptron"
version = "0.1.0"
description = "Unoptimized MLPs in Rust"
license = "MIT OR Apache-2.0"
keywords = ["mlp"]
categories = ["science"]
edition = "2021"
repository = "https://github.com/lumi-a/rust-multilayer-perceptron"

[dependencies]
ndarray = "0.16.1"
ndarray-rand = "0.15.0"
num = "0.4.3"
